crates/runie-tui/tests/snapshots/visual_snapshots__visual-scroll.snap
---
source: crates/runie-tui/tests/visual_snapshots.rs
expression: screen
---
                                        
   main ~/Code/GitHub/runie-tests/run  
       line two                         
       line three                       
       line four                        
       line five                        
  ╭──────────────────────────────────╮  
  │ ❯                                │  
  ╰──────────────── Grok 4.5 (high) ─╯  
                                        
  Enter:send  │  Shift+Tab:mode  │  Ct
