crates/runie-tui/tests/snapshots/visual_snapshots__visual-tool.snap
---
source: crates/runie-tui/tests/visual_snapshots.rs
expression: screen
---
                                                                                
   main ~/Code/GitHub/runie-tests/runie                                        
                                                                                
     ◆ session_start  [hooks: 1]                                                
                                                                                
                                                                                
     ❯ inspect                                                                  
                                                                                
                                                                                
  ◆ echo {"value":"hello"} → ✓                                                  
    ↳ {"value":"hello"}                                                         
                                                                                
                                                                                
                                                                                
                                                                                
       Worked for 0.0s                                                          
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ ❯ Type your message...                                                   │  
  ╰──────────────────────────────────────────────────────── Grok 4.5 (high) ─╯  
                                                                                
  Enter:send  │  Shift+Tab:mode  │  Ctrl+x:shortcuts
