crates/runie-tui/tests/snapshots/visual_snapshots__visual-typed.snap
---
source: crates/runie-tui/tests/visual_snapshots.rs
expression: screen
---
                                                                                
   main ~/Code/GitHub/runie-tests/runie                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
    ⠋ Starting session… 0.0s                                                    
                                                                                
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ ❯ echo                                                                   │  
  ╰──────────────────────────────────────────────────────── Grok 4.5 (high) ─╯  
                                                                                
  Enter:send  │  Shift+Tab:mode  │  Ctrl+x:shortcuts
